Fix linters error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,462 @@
-html{scroll-behavior:smooth}@font-face{font-family:"cocogoose";src:url("/assets/css/webfontkit/cocogoose_pro-trial-webfont.woff");src:url("/assets/css/webfontkit/cocogoose_pro_ultralight-trial-webfont.woff2") format("woff"),url("/assets/css/webfontkit/cocogoose_pro_italic-trial-webfont.woff2") format("opentype")}*{box-sizing:border-box;margin:0;padding:0;font-family:"Lato",sans-serif}body{position:relative}.top-nav{padding:0 5%}.top-nav a{color:#d3d3d3;padding:1em 0 1em 0.9em}.top-nav i{padding:1em 0 1em 0.9em}#myHeader{z-index:999;box-shadow:1px 1px 10px 0 rgba(0,0,0,0.5)}.active{color:#EC5242 !important}#myHeader .btn{border:4px solid #EC5242 !important;padding:0.1234em 1em}#myHeader .btn:hover{color:#fff !important;background-color:#EC5242}a:hover{text-decoration:none}.featured-course a{color:#fff !important;background-color:#EC5242;padding:1em}.nav li a{color:#272A31;margin:0 0.2em !important}.featured-course a:hover{color:#fff !important;background-color:#EC5242;-webkit-transition:all 0.2s linear;padding:1.5em;transition:all 0.2s linear}.nav li a:hover{color:#EC5242;margin:0 0.2em !important}.font-2x{font-size:2rem}.nav-wrapper{padding:0.5em 5%}.stickTop{position:fixed;top:0;width:100%}img{width:100%;height:auto}.hero{background-image:linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.7)),url(/assets/images/hero-img.jpg);background-size:cover;background-attachment:fixed !important;padding:4em 0 1em 5%;height:30%;font-weight:900}.hero h1{color:white;background:url(/assets/images/hero-img.jpg) 0 0 no-repeat;background-color:rgba(0,0,0,0.5);-webkit-background-clip:text;background-clip:text;background-attachment:fixed;font-size:5em;font-weight:900;-webkit-text-fill-color:transparent}.description{width:95%;border:4px solid #f1f1f1;background-color:rgba(0,0,0,0.5) !important;color:#fff;font-weight:400;font-size:1rem;z-index:0}.select-ticket .step-text::before{content:"";position:absolute;left:0;height:7px;width:7px;background-color:#EC5242;transform:rotate(45deg);top:5px}.select-ticket{padding-bottom:3rem;position:relative}.cube{width:50px;height:50px;text-align:center;transform:rotate(45deg)}.v{transform:rotate(320deg);display:inline-block}.cube .v{transform:rotate(320deg);display:inline-block}.square{transform:rotate(45deg);display:inline-block}.plan{margin:auto;min-width:80%;border:10px solid transparent;border-image:repeating-linear-gradient(-45deg, #EC5242 0, #EC5242 1em, transparent 1em, transparent 2em, #272A31 2em, #272A31 3em, transparent 3em, transparent 4em) 80 repeat}.step{width:100%;margin:0 auto;border-radius:40px}.abt-hero{background:linear-gradient(rgba(0,0,0,0.61), rgba(0,0,0,0.63)),url(/assets/images/abt-img.jpg) 0 0 no-repeat;background-size:cover;background-attachment:fixed !important;background-position:center;color:#fff;text-align:center;padding:4em 1em 1em 1em;height:50%}.abt-hero h1{color:#EC5242}.project1{background:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url(/assets/images/project1.jpg) 0 0 no-repeat;background-size:cover;padding:5em 0}.project2{background:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url(/assets/images/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg) 0 0 no-repeat;background-size:cover;padding:5em 0}.abt{text-align:center;height:auto}.abt h1{font-size:2rem}.tutors img{width:100%;margin:1em 0 0 0;height:auto;display:block !important}.abt hr{width:5%;margin:0 auto;background-color:#EC5242}.abt-description{width:100%;border:4px solid #f1f1f1;background-color:rgba(0,0,0,0.5) !important;color:#fff;font-weight:400;font-size:1rem;z-index:0;margin:0 auto}.featured-course{background:url(/assets/images/bg.jpg) 0 0 no-repeat;background-size:cover;color:#d3d3d3;padding:5%;height:auto}.featured-course h5{font-weight:bold;color:#EC5242;font-size:1.5rem}.featured-course hr{background-color:#EC5242;width:5%;margin:0 auto;padding:0.123em}.featured-course .cols{background-color:#fff;color:#272A31;width:100%;opacity:0.9;margin:0.2em 0}.client-item .cols{margin:1em;width:30%}.featured-course .cols:hover{box-shadow:1px 1px 2px 0 rgba(0,0,0,0.3);opacity:0.6;cursor:pointer}.view-all-course{border-bottom:1px solid #ccc;text-decoration:none;color:#d3d3d3}.wrapper{margin:0 5%}.tutors small{color:#EC5242}.tutors-img::after{right:0;bottom:auto;border-right:3px dotted #EC5242;border-bottom:3px dotted #EC5242;content:"";position:absolute;height:20px;width:20px}.tutors-img::before{content:"";position:absolute;height:20px;width:20px;border-left:3px dotted #EC5242;border-top:3px dotted #EC5242;left:0;top:0}.tutors hr{background-color:#EC5242;width:5%;margin:0 auto}.tutors h4{margin:0 auto}.client-section{padding:0}.client-section h4{text-align:center;width:100%;padding:1em;color:#d3d3d3}.client-item{display:flex;justify-content:center;align-items:center;flex-wrap:wrap}.client-item h4{text-align:center !important;color:#d3d3d3;margin:2em auto}.client-section hr{background-color:#EC5242;width:2%;margin:0 auto;padding:0.123em}.footer{display:flex;align-items:center;padding:1em 5%;background-color:#f1f1f1}.featured-course .w{width:80px;padding:0 0 0 1em}@media only screen and (min-width: 768px){.nav a{padding:0 0 0 0.1em}.hero{padding:8em 0 2em 5%;height:90vh !important;font-weight:900}.featured-course{padding:1% 5% 1%;height:auto}.featured-course .w{width:100%;padding:0}.featured-course p{height:100%}.tutors{padding:0 5%}.description{width:50% !important;border:4px solid #ccc;font-weight:400;font-size:0.8em;z-index:0}.client-section{padding:5em 10em}.client-section h4{text-align:center;width:100%;padding:1em;color:#f1f1f1}.client-item{display:flex}.client-item .cols{margin:0 1em;width:20%}.step{width:40%;margin:0 auto;border-radius:40px}.abt-description{width:50%}}
+html {
+  scroll-behavior: smooth;
+}
+
+@font-face {
+  font-family: "cocogoose";
+  src: url("/assets/css/webfontkit/cocogoose_pro-trial-webfont.woff");
+  src:
+    url("/assets/css/webfontkit/cocogoose_pro_ultralight-trial-webfont.woff2")
+    format("woff"),
+    url("/assets/css/webfontkit/cocogoose_pro_italic-trial-webfont.woff2")
+    format("opentype");
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Lato", sans-serif;
+}
+
+body {
+  position: relative;
+}
+
+.top-nav {
+  padding: 0 5%;
+}
+
+.top-nav a {
+  color: #d3d3d3;
+  padding: 1em 0 1em 0.9em;
+}
+
+.top-nav i {
+  padding: 1em 0 1em 0.9em;
+}
+
+#myHeader {
+  z-index: 999;
+  box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.5);
+}
+
+.active {
+  color: #ec5242 !important;
+}
+
+#myHeader .btn {
+  border: 4px solid #ec5242 !important;
+  padding: 0.1234em 1em;
+}
+
+#myHeader .btn:hover {
+  color: #fff !important;
+  background-color: #ec5242;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.featured-course a {
+  color: #fff !important;
+  background-color: #ec5242;
+  padding: 1em;
+}
+
+.nav li a {
+  color: #272a31;
+  margin: 0 0.2em !important;
+}
+
+.featured-course a:hover {
+  color: #fff !important;
+  background-color: #ec5242;
+  -webkit-transition: all 0.2s linear;
+  padding: 1.5em;
+  transition: all 0.2s linear;
+}
+
+.nav li a:hover {
+  color: #ec5242;
+  margin: 0 0.2em !important;
+}
+
+.font-2x {
+  font-size: 2rem;
+}
+
+.nav-wrapper {
+  padding: 0.5em 5%;
+}
+
+.stickTop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.hero {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
+    url(/assets/images/hero-img.jpg);
+  background-size: cover;
+  background-attachment: fixed !important;
+  padding: 4em 0 1em 5%;
+  height: 30%;
+  font-weight: 900;
+}
+
+.hero h1 {
+  color: #ec5242;
+  background: url(/assets/images/hero-img.jpg) 0 0 no-repeat;
+  background-clip: padding-box;
+  -webkit-background-clip: text;
+  background-attachment: fixed;
+  font-size: 5em;
+  width: 55%;
+  font-weight: 900;
+  -webkit-text-fill-color: transparent;
+}
+
+.description {
+  width: 95%;
+  border: 4px solid #f1f1f1;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1rem;
+  z-index: 0;
+}
+
+.select-ticket .step-text::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 7px;
+  width: 7px;
+  background-color: #ec5242;
+  transform: rotate(45deg);
+  top: 5px;
+}
+
+.select-ticket {
+  padding-bottom: 3rem;
+  position: relative;
+}
+
+.cube {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  transform: rotate(45deg);
+}
+
+.v {
+  transform: rotate(320deg);
+  display: inline-block;
+}
+
+.cube .v {
+  transform: rotate(320deg);
+  display: inline-block;
+}
+
+.square {
+  transform: rotate(45deg);
+  display: inline-block;
+}
+
+.plan {
+  margin: auto;
+  min-width: 80%;
+  border: 10px solid transparent;
+  border-image:
+    repeating-linear-gradient(
+      -45deg,
+      #ec5242 0,
+      #ec5242 1em,
+      transparent 1em,
+      transparent 2em,
+      #272a31 2em,
+      #272a31 3em,
+      transparent 3em,
+      transparent 4em
+    )
+    80 repeat;
+}
+
+.step {
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 40px;
+}
+
+.abt-hero {
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.61), rgba(0, 0, 0, 0.63)),
+    url(/assets/images/abt-img.jpg) 0 0 no-repeat;
+  background-size: cover;
+  background-attachment: fixed !important;
+  background-position: center;
+  color: #fff;
+  text-align: center;
+  padding: 4em 1em 1em 1em;
+  height: 50%;
+}
+
+.abt-hero h1 {
+  color: #ec5242;
+}
+
+.project1 {
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(/assets/images/project1.jpg) 0 0 no-repeat;
+  background-size: cover;
+  padding: 5em 0;
+}
+
+.project2 {
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(/assets/images/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg) 0 0 no-repeat;
+  background-size: cover;
+  padding: 5em 0;
+}
+
+.abt {
+  text-align: center;
+  height: auto;
+}
+
+.abt h1 {
+  font-size: 2rem;
+}
+
+.tutors img {
+  width: 100%;
+  margin: 1em 0 0 0;
+  height: auto;
+  display: block !important;
+}
+
+.abt hr {
+  width: 5%;
+  margin: 0 auto;
+  background-color: #ec5242;
+}
+
+.abt-description {
+  width: 100%;
+  border: 4px solid #f1f1f1;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1rem;
+  z-index: 0;
+  margin: 0 auto;
+}
+
+.featured-course {
+  background: url(/assets/images/bg.jpg) 0 0 no-repeat;
+  background-size: cover;
+  color: #d3d3d3;
+  padding: 5%;
+  height: auto;
+}
+
+.featured-course h5 {
+  font-weight: bold;
+  color: #ec5242;
+  font-size: 1.5rem;
+}
+
+.featured-course hr {
+  background-color: #ec5242;
+  width: 5%;
+  margin: 0 auto;
+  padding: 0.123em;
+}
+
+.featured-course .cols {
+  background-color: #fff;
+  color: #272a31;
+  width: 100%;
+  opacity: 0.9;
+  margin: 0.2em 0;
+}
+
+.client-item .cols {
+  margin: 1em;
+  width: 30%;
+}
+
+.featured-course .cols:hover {
+  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.3);
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.view-all-course {
+  border-bottom: 1px solid #ccc;
+  text-decoration: none;
+  color: #d3d3d3;
+}
+
+.wrapper {
+  margin: 0 5%;
+}
+
+.tutors small {
+  color: #ec5242;
+}
+
+.tutors-img::after {
+  right: 0;
+  bottom: auto;
+  border-right: 3px dotted #ec5242;
+  border-bottom: 3px dotted #ec5242;
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 20px;
+}
+
+.tutors-img::before {
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  border-left: 3px dotted #ec5242;
+  border-top: 3px dotted #ec5242;
+  left: 0;
+  top: 0;
+}
+
+.tutors hr {
+  background-color: #ec5242;
+  width: 5%;
+  margin: 0 auto;
+}
+
+.tutors h4 {
+  margin: 0 auto;
+}
+
+.client-section {
+  padding: 0;
+}
+
+.client-section h4 {
+  text-align: center;
+  width: 100%;
+  padding: 1em;
+  color: #d3d3d3;
+}
+
+.client-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.client-item h4 {
+  text-align: center !important;
+  color: #d3d3d3;
+  margin: 2em auto;
+}
+
+.client-section hr {
+  background-color: #ec5242;
+  width: 2%;
+  margin: 0 auto;
+  padding: 0.123em;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  padding: 1em 5%;
+  background-color: #f1f1f1;
+}
+
+.featured-course .w {
+  width: 80px;
+  padding: 0 0 0 1em;
+}
+
+@media only screen and (min-width: 768px) {
+  .nav a {
+    padding: 0 0 0 0.1em;
+  }
+
+  .hero {
+    padding: 8em 0 2em 5%;
+    height: 90vh !important;
+    font-weight: 900;
+  }
+
+  .featured-course {
+    padding: 1% 5% 1%;
+    height: auto;
+  }
+
+  .featured-course .w {
+    width: 100%;
+    padding: 0;
+  }
+
+  .featured-course p {
+    height: 100%;
+  }
+
+  .tutors {
+    padding: 0 5%;
+  }
+
+  .description {
+    width: 50% !important;
+    border: 4px solid #ccc;
+    font-weight: 400;
+    font-size: 0.8em;
+    z-index: 0;
+  }
+
+  .client-section {
+    padding: 5em 10em;
+  }
+
+  .client-section h4 {
+    text-align: center;
+    width: 100%;
+    padding: 1em;
+    color: #f1f1f1;
+  }
+
+  .client-item {
+    display: flex;
+  }
+
+  .client-item .cols {
+    margin: 0 1em;
+    width: 20%;
+  }
+
+  .step {
+    width: 40%;
+    margin: 0 auto;
+    border-radius: 40px;
+  }
+
+  .abt-description {
+    width: 50%;
+  }
+}
