--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -1,5 +1,6 @@
-$dark-color: #272A31;
-$red-color: #EC5242;
-$ash-color: #D3D3D3;
+$dark-color: #272a31;
+$red-color: #ec5242;
+$ash-color: #d3d3d3;
+$text: text;
 
 $custom-fonts: "Lato", sans-serif;
