--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,10 +7,11 @@ html {
 @font-face {
   font-family: "cocogoose";
   src: url("/assets/css/webfontkit/cocogoose_pro-trial-webfont.woff");
-  src: url("/assets/css/webfontkit/cocogoose_pro_ultralight-trial-webfont.woff2")
-      format("woff"),
+  src:
+    url("/assets/css/webfontkit/cocogoose_pro_ultralight-trial-webfont.woff2")
+    format("woff"),
     url("/assets/css/webfontkit/cocogoose_pro_italic-trial-webfont.woff2")
-      format("opentype");
+    format("opentype");
 }
 
 * {
@@ -104,7 +105,8 @@ img {
 }
 
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
     url(/assets/images/hero-img.jpg);
   background-size: cover;
   background-attachment: fixed !important;
@@ -113,13 +115,13 @@ img {
   font-weight: 900;
 
   h1 {
-    color: white;
+    color: $red-color;
     background: url(/assets/images/hero-img.jpg) 0 0 no-repeat;
-    background-color: rgba(0, 0, 0, 0.5px);
-    -webkit-background-clip: text;
-    background-clip: text;
+    background-clip: padding-box;
+    -webkit-background-clip: $text;
     background-attachment: fixed;
     font-size: 5em;
+    width: 55%;
     font-weight: 900;
     -webkit-text-fill-color: transparent;
   }
@@ -179,7 +181,8 @@ img {
   margin: auto;
   min-width: 80%;
   border: 10px solid transparent;
-  border-image: repeating-linear-gradient(
+  border-image:
+    repeating-linear-gradient(
       -45deg,
       $red-color 0,
       $red-color 1em,
@@ -202,7 +205,8 @@ img {
 /* About page */
 
 .abt-hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.61), rgba(0, 0, 0, 0.63)),
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.61), rgba(0, 0, 0, 0.63)),
     url(/assets/images/abt-img.jpg) 0 0 no-repeat;
   background-size: cover;
   background-attachment: fixed !important;
@@ -218,14 +222,16 @@ img {
 }
 
 .project1 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(/assets/images/project1.jpg) 0 0 no-repeat;
   background-size: cover;
   padding: 5em 0;
 }
 
 .project2 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(/assets/images/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg) 0 0 no-repeat;
   background-size: cover;
   padding: 5em 0;
