--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -90,7 +90,7 @@ a:hover {
 }
 
 .nav-wrapper {
-  padding: 0.5em 5%;
+  padding: 0 5%;
 }
 
 .stickTop {
@@ -110,7 +110,7 @@ img {
     url(/assets/images/hero-img.jpg);
   background-size: cover;
   background-attachment: fixed !important;
-  padding: 4em 0 1em 5%;
+  padding: 3em 0.5em;
   height: 30%;
   font-weight: 900;
 
@@ -121,21 +121,20 @@ img {
     -webkit-background-clip: $text;
     background-attachment: fixed;
     font-size: 5em;
-    width: 55%;
     font-weight: 900;
     -webkit-text-fill-color: transparent;
   }
+  .description {
+    width: 100%;
+    border: 4px solid #f1f1f1;
+    background-color: rgba(0, 0, 0, 0.5) !important;
+    color: #fff;
+    font-weight: 400;
+    font-size: 1rem;
+    z-index: 0;
+  }
 }
 
-.description {
-  width: 95%;
-  border: 4px solid #f1f1f1;
-  background-color: rgba(0, 0, 0, 0.5) !important;
-  color: #fff;
-  font-weight: 400;
-  font-size: 1rem;
-  z-index: 0;
-}
 
 /* Plan page */
 
@@ -274,8 +273,11 @@ img {
   background: url(/assets/images/bg.jpg) 0 0 no-repeat;
   background-size: cover;
   color: $ash-color;
-  padding: 5%;
   height: auto;
+
+  .wrapper {
+    margin: 0 2% 0 1%;
+  }
 }
 
 .featured-course h5 {
@@ -316,9 +318,7 @@ img {
   color: $ash-color;
 }
 
-.wrapper {
-  margin: 0 5%;
-}
+
 
 .tutors small {
   color: $red-color;
@@ -407,8 +407,8 @@ img {
   }
 
   .hero {
-    padding: 8em 0 2em 5%;
-    height: 90vh !important;
+    padding: 7em 5em;
+    height: 85vh !important;
     font-weight: 900;
   }
 
