--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -408,7 +408,7 @@ img {
 
   .hero {
     padding: 7em 5em;
-    height: 85vh !important;
+    height: 30% !important;
     font-weight: 900;
   }
 
